[package]
name = "anti_debug"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
windows = { version = "0.58.0", features = ["Wdk_System_SystemInformation", "Wdk_System_Threading", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Threading"] }
